--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,4 @@
-Viestien määrä: {{ count }}
-<hr>
-{% for message in messages %}
-{{ message.content }}
-<hr>
-{% endfor %}
-<a href="/new">Lähetä viesti</a>
+
+<a href="/login">Log In</a>
+<a href="/register">Register</a>
+
