--- a/templates/new.html
+++ b/templates/new.html
@@ -1,6 +1,6 @@
-<form action="/create" method="POST">
-    Viesti: <br>
-    <textarea name="topic" rows="3" cols="40"></textarea>
+<form action="/new" method="POST">
+    Thread name: <br>
+    <textarea name="topic" rows="1" cols="40"></textarea>
     <br>
-    <input type="submit" value="Lähetä">
+    <input type="submit" value="Post">
     </form>
