--- a/templates/new.html
+++ b/templates/new.html
@@ -3,4 +3,6 @@
     <textarea name="topic" rows="1" cols="40"></textarea>
     <br>
     <input type="submit" value="Post">
+    <input type="hidden" name="id" value="{{ id }}">
+
     </form>
