--- a/templates/new.html
+++ b/templates/new.html
@@ -4,5 +4,5 @@
     <br>
     <input type="submit" value="Post">
     <input type="hidden" name="id" value="{{ id }}">
-
+    <input type="hidden" name="user" value="{{ session.username }}">
     </form>
