--- a/templates/new.html
+++ b/templates/new.html
@@ -1,3 +1,4 @@
+{% if session.username %}
 <form action="/new" method="POST">
     Thread name: <br>
     <textarea name="topic" rows="1" cols="40"></textarea>
@@ -6,3 +7,4 @@
     <input type="hidden" name="id" value="{{ id }}">
     <input type="hidden" name="user" value="{{ session.username }}">
     </form>
+{% endif %}
