Added secret area

--- a/templates/main.html
+++ b/templates/main.html
@@ -8,6 +8,7 @@ You are an admin
 <br>
 <a href="/newcategory" >Create new area</a>
 <hr>
+<a href="/secretarea" >Secret area</a>
 {% endif %}
 <br>
  <form action="/search" method="POST">
