--- a/templates/newsecret.html
+++ b/templates/newsecret.html
@@ -1,10 +1,9 @@
 {% if session.admin %}
-<form action="/newcategory" method="POST">
+<form action="/newsecret" method="POST">
     Thread name: <br>
     <textarea name="topic" rows="1" cols="40"></textarea>
     <br>
     <input type="submit" value="Post">
-    <input type="hidden" name="id" value="{{ id }}">
     <input type="hidden" name="user" value="{{ session.username }}">
     </form>
 {% endif %}
