--- a/templates/secretmessages.html
+++ b/templates/secretmessages.html
@@ -1,4 +1,4 @@
-{% if session.username %}
+{% if session.admin %}
 {% if session.username== creator %}
 <form action="/editt" method="POST">
     {{topic}}
@@ -11,7 +11,7 @@
 <form action="/delete" method="POST">
     <input type="submit" value="Delete thread">
     <input type="hidden" name="id" value="{{ id }}">
-    <input type="hidden" name="type" value="thread">
+    <input type="hidden" name="type" value="secretthread">
 </form>
 {% else %}
 
@@ -26,7 +26,7 @@ Number of messages: {{ count }}
     <input type="submit" value="Send">
     <input type="hidden" name="id" value="{{ id }}">
     <input type="hidden" name="user" value="{{ session.username }}">
-    <input type="hidden" name="type" value="normal">
+    <input type="hidden" name="type" value="secretmessage">
     </form>
     
 <hr>
@@ -45,7 +45,8 @@ by <a href="/user/{{message[4]}}">{{ message[1] }}</a> at {{message[2].strftime(
 <form action="/delete" method="POST">
     <input type="submit" value="Delete message">
     <input type="hidden" name="id" value="{{message[0]}}">
-    <input type="hidden" name="type" value="message">
+    <input type="hidden" name="type" value="secretmessage">
+    
 </form>
 {% endif %}
 <hr>
