--- a/templates/editt.html
+++ b/templates/editt.html
@@ -5,4 +5,5 @@
     <input type="submit" value="Send">
     <input type="hidden" name="id" value="{{ id }}">
     <input type="hidden" name="user" value="{{ session.username }}">
+    <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}">
     </form>
