--- a/templates/main.html
+++ b/templates/main.html
@@ -4,6 +4,7 @@ Number of categories: {{ count }}
 <hr>
 Logged in as {{session.username}}
 {% if session.admin == True %}
+<br>
 You are an admin
 <br>
 <a href="/newcategory" >Create new area</a>
@@ -33,12 +34,14 @@ Last message sent : {{cat.last_sent.strftime("%H:%M %d-%m-%Y")}}
     <input type="submit" value="Edit">
     <input type="hidden" name="id" value="{{ cat.id }}">
     <input type="hidden" name="type" value="categoryname">
+    <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}">
 
 </form>
 <form action="/delete" method="POST">
     <input type="submit" value="Delete area">
     <input type="hidden" name="id" value="{{ cat.id }}">
     <input type="hidden" name="type" value="category">
+    <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}">
 </form>
 <hr>
 {% endfor %}
