--- a/templates/new.html
+++ b/templates/new.html
@@ -6,5 +6,6 @@
     <input type="submit" value="Post">
     <input type="hidden" name="id" value="{{ id }}">
     <input type="hidden" name="user" value="{{ session.username }}">
+    <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}">
     </form>
 {% endif %}
