--- a/templates/newsecret.html
+++ b/templates/newsecret.html
@@ -5,5 +5,6 @@
     <br>
     <input type="submit" value="Post">
     <input type="hidden" name="user" value="{{ session.username }}">
+    <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}">
     </form>
 {% endif %}
