--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,21 @@
+<body>
+    <h1>Forum</h1>
+    <nav>
+      <ul>
+        <li><a href="/login">Log In</a></li>
+        <hr>
+        <li><a href="/register">Register</a></li>
+      </ul>
+    </nav>
 
-<a href="/login">Log In</a>
-<a href="/register">Register</a>
+<style>
+    body {
+    margin: auto;
+    max-width: 45em;
+    font-family: 'Helvetica', 'Arial', sans-serif;
+    padding-top: 10em;
+}
+</style>
+
+
 
