--- a/templates/login.html
+++ b/templates/login.html
@@ -1,3 +1,7 @@
+
+<body>
+
+
 <form action="/login" method="POST">
     Username:
     <input type="text" name="username">
@@ -8,3 +12,13 @@
     <input type="submit" value="Log In">
     </form>
     <a href="/">Go back</a>
+</body>
+
+<style>
+    body {
+    margin: auto;
+    max-width: 45em;
+    font-family: 'Helvetica', 'Arial', sans-serif;
+    padding-top: 10em;
+}
+</style>
