--- a/templates/newsecret.html
+++ b/templates/newsecret.html
@@ -1,10 +1,13 @@
+{% extends "layout.html" %}
+{% block content %}
 {% if session.admin %}
 <form action="/newsecret" method="POST">
     Thread name: <br>
-    <textarea name="topic" rows="1" cols="40"></textarea>
+    <input type="text" name="topic" required="required">
     <br>
     <input type="submit" value="Post">
     <input type="hidden" name="user" value="{{ session.username }}">
     <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}">
     </form>
 {% endif %}
+{% endblock %}
