--- a/templates/register.html
+++ b/templates/register.html
@@ -1,10 +1,24 @@
+
+<body>
+
+
 <form action="/register" method="POST">
     Username:
-    <input type="text" name="username">
+    <input type="text" name="" required="required">
     <br>
     Password:
-    <input type="text" name="password">
+    <input type="text" name="password" required="required">
     <br>
     <input type="submit" value="Register">
     </form>
     <a href="/">Go back</a>
+</body>
+
+    <style>
+        body {
+        margin: auto;
+        max-width: 45em;
+        font-family: 'Helvetica', 'Arial', sans-serif;
+        padding-top: 10em;
+    }
+    </style>
