--- a/templates/secretarea.html
+++ b/templates/secretarea.html
@@ -1,15 +1,15 @@
-
+{% extends "layout.html" %}
+{% block content %}
 {% if session.admin %}
-ADMIN AREA
+<h2>Admin area</h2>
 <br>
 Number of threads: {{ count }}
 <hr>
 <a href="/newsecret/">Create new thread</a>
 <hr>
 {% for thread in threads %}
-<a href="/secretmessages/{{ thread.id }}">{{ thread.topic }}</a> by {{thread.creator}} at {{thread.created_at.strftime("%H:%M %d-%m-%Y")}}
+<a href="/secretmessages/{{ thread.id }}" style="font-size:20px">{{ thread.topic }}</a> by {{thread.creator}} at {{thread.created_at.strftime("%H:%M %d-%m-%Y")}}
 <hr>
 {% endfor %}
-<a href="/main">Back to main page</a>
-<hr> <a href="/logout">Log out</a>
 {% endif %}
+{% endblock %}
