--- a/templates/secretmessages.html
+++ b/templates/secretmessages.html
@@ -1,9 +1,14 @@
+{% extends "layout.html" %}
+{% block nav %}
+<li><a href="/secretarea">Admin</a></li> 
+{% endblock %}
+{% block content %}
 {% if session.admin %}
 {% if session.username== creator %}
 <form action="/editt" method="POST">
     {{topic}}
     Edit thread name:
-    <textarea name="content" rows="1" cols="40"></textarea>
+    <input type="text" name="content" required="required">
     <input type="submit" value="Edit">
     <input type="hidden" name="id" value="{{ id }}">
     <input type="hidden" name="type" value="threadname">
@@ -44,12 +49,14 @@ by <a href="/user/{{message[4]}}">{{ message[1] }}</a> at {{message[2].strftime(
     <input type="submit" value="Edit">
     <input type="hidden" name="id" value="{{message[0]}}">
     <input type="hidden" name="type" value="message">
+    <input type="hidden" name="thread_id" value="{{id}}">
     <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}">
 </form>
 <form action="/delete" method="POST">
     <input type="submit" value="Delete message">
     <input type="hidden" name="id" value="{{message[0]}}">
     <input type="hidden" name="type" value="secretmessage">
+    <input type="hidden" name="thread_id" value="{{id}}">
     <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}">
     
 </form>
@@ -59,3 +66,4 @@ by <a href="/user/{{message[4]}}">{{ message[1] }}</a> at {{message[2].strftime(
 <a href="/main">Back to main page</a>
 <hr><a href="/logout">Log out</a>
 {% endif %}
+{% endblock %}
