--- a/templates/new.html
+++ b/templates/new.html
@@ -1,3 +1,5 @@
+{% extends "layout.html" %}
+{% block content %}
 {% if session.username %}
 <form action="/new" method="POST">
     Thread name: <br>
@@ -9,3 +11,4 @@
     <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}">
     </form>
 {% endif %}
+{% endblock %}
