--- a/templates/search.html
+++ b/templates/search.html
@@ -1,9 +1,12 @@
+{% extends "layout.html" %}
+{% block content %}
 {% if session.username %}
 {% for message in messages %}
-{{ message.content }}
+<b style="font-size:15px">{{ message.content }}</b>
 <br>
 by {{ message.sender }} at {{message.sent_at.strftime("%H:%M %d-%m-%Y")}} 
 <a href="/messages/{{message.thread_id}}">To thread</a>
 <hr>
 {% endfor %}
 {% endif %}
+{% endblock %}
