--- a/templates/register.html
+++ b/templates/register.html
@@ -1,24 +1,23 @@
-
 <body>
 
 
-<form action="/register" method="POST">
-    Username:
-    <input type="text" name="" required="required">
-    <br>
-    Password:
-    <input type="text" name="password" required="required">
-    <br>
-    <input type="submit" value="Register">
+    <form action="/register" method="POST">
+        Username:
+        <input type="text" name="username" required="required" >
+        <br>
+        Password:
+        <input type="text" name="password" required="required">
+        <br>
+        <input type="submit" value="Register">
     </form>
     <a href="/">Go back</a>
 </body>
 
-    <style>
-        body {
+<style>
+    body {
         margin: auto;
         max-width: 45em;
         font-family: 'Helvetica', 'Arial', sans-serif;
         padding-top: 10em;
     }
-    </style>
+</style>
