--- a/templates/secretarea.html
+++ b/templates/secretarea.html
@@ -8,7 +8,8 @@ Number of threads: {{ count }}
 <a href="/newsecret/">Create new thread</a>
 <hr>
 {% for thread in threads %}
-<a href="/secretmessages/{{ thread.id }}" style="font-size:20px">{{ thread.topic }}</a> by {{thread.creator}} at {{thread.created_at.strftime("%H:%M %d-%m-%Y")}}
+<a href="/secretmessages/{{ thread.id }}" style="font-size:20px">{{ thread.topic }}</a> by {{thread.creator}} at
+{{thread.created_at.strftime("%H:%M %d-%m-%Y")}}
 <hr>
 {% endfor %}
 {% endif %}
