--- a/templates/messages.html
+++ b/templates/messages.html
@@ -61,7 +61,7 @@ by <a href="/user/{{message[4]}}">{{ message[1] }}</a> at {{message[2].strftime(
             <input type="text" name="content" required="required">
             <input type="submit" value="Edit">
             <input type="hidden" name="id" value="{{message[0]}}">
-            <input type="hidden" name="thread_id" value="{{thread_id}}">
+            <input type="hidden" name="thread_id" value="{{id}}">
             <input type="hidden" name="type" value="message">
             <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}">
         </form>
@@ -70,7 +70,7 @@ by <a href="/user/{{message[4]}}">{{ message[1] }}</a> at {{message[2].strftime(
         <form action="/delete" method="POST">
             <input type="submit" value="Delete message">
             <input type="hidden" name="id" value="{{message[0]}}">
-            <input type="hidden" name="thread_id" value="{{thread_id}}">
+            <input type="hidden" name="thread_id" value="{{id}}">
             <input type="hidden" name="type" value="message">
             <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}">
         </form>
