--- a/templates/secretmessages.html
+++ b/templates/secretmessages.html
@@ -1,25 +1,31 @@
 {% extends "layout.html" %}
 {% block nav %}
-<li><a href="/secretarea">Admin</a></li>
+<li><a href="/secretarea">Admin area</a></li>
 {% endblock %}
 {% block content %}
 {% if session.admin %}
 {% if session.username== creator %}
+<nav>
+    <li>
 <form action="/editt" method="POST">
-    {{topic}}
+    <h2>{{topic}}</h2>
+    <br>
     Edit thread name:
     <input type="text" name="content" required="required">
     <input type="submit" value="Edit">
     <input type="hidden" name="id" value="{{ id }}">
     <input type="hidden" name="type" value="threadname">
     <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}">
-</form>
-<form action="/delete" method="POST">
+    <input type="hidden" name="secret" value="yes">
+</form></li>
+
+<li><form action="/delete" method="POST">
     <input type="submit" value="Delete thread">
     <input type="hidden" name="id" value="{{ id }}">
     <input type="hidden" name="type" value="secretthread">
     <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}">
-</form>
+</form></li>
+</nav>
 {% else %}
 
 {{topic}}
@@ -39,19 +45,20 @@ Number of messages: {{ count }}
 
 <hr>
 {% for message in messages %}
-{{ message[3] }}
+<b style="font-size:15px">{{ message[3] }}</b>
 <br>
 by <a href="/user/{{message[4]}}">{{ message[1] }}</a> at {{message[2].strftime("%H:%M %d-%m-%Y")}}
 {% if session.username== message[1] %}
+<nav><li>
 <form action="/editt" method="POST">
     Edit message:
     <textarea name="content" rows="1" cols="40"></textarea>
     <input type="submit" value="Edit">
     <input type="hidden" name="id" value="{{message[0]}}">
-    <input type="hidden" name="type" value="message">
+    <input type="hidden" name="type" value="secretmessage">
     <input type="hidden" name="thread_id" value="{{id}}">
     <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}">
-</form>
+</form></li><li>
 <form action="/delete" method="POST">
     <input type="submit" value="Delete message">
     <input type="hidden" name="id" value="{{message[0]}}">
@@ -60,10 +67,9 @@ by <a href="/user/{{message[4]}}">{{ message[1] }}</a> at {{message[2].strftime(
     <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}">
 
 </form>
+</li></nav>
 {% endif %}
 <hr>
 {% endfor %}
-<a href="/main">Back to main page</a>
-<hr><a href="/logout">Log out</a>
 {% endif %}
 {% endblock %}
