--- a/templates/register.html
+++ b/templates/register.html
@@ -3,10 +3,10 @@
 
     <form action="/register" method="POST">
         Username:
-        <input type="text" name="username" required="required" >
+        <input type="text" name="username" >
         <br>
         Password:
-        <input type="text" name="password" required="required">
+        <input type="text" name="password">
         <br>
         <input type="submit" value="Register">
     </form>
