--- a/templates/secretmessages.html
+++ b/templates/secretmessages.html
@@ -14,9 +14,8 @@
     <input type="text" name="content" required="required">
     <input type="submit" value="Edit">
     <input type="hidden" name="id" value="{{ id }}">
-    <input type="hidden" name="type" value="threadname">
+    <input type="hidden" name="type" value="secretthreadname">
     <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}">
-    <input type="hidden" name="secret" value="yes">
 </form></li>
 
 <li><form action="/delete" method="POST">
